styles/_index.scss
.index {
  margin: 2rem 0 0;

  &__column {
    @include stack(.75rem);
  }

  @media (max-width: $index-width) {
    @include stack;
    max-width: $page-width;
  }

  @media (min-width: $index-width) {
    display: flex;
    gap: 1rem;
    align-items: start;

    &__column {
      width: 320px;
    }
  }

  &__more {
    text-decoration: none;
    display: inline-block;

    @media print {
      display: none;
    }
  }
}

.hero {
  margin-top: 2rem;
  display: flex;
  gap: 1rem;
  align-items: center;

  &__heading {
    font-size: $font-size-hero;
  }

  &__subheading {
    font-size: $font-size-large;
  }

  &__arne {
    max-height: 130px;

    &::selection {
      background: none;
    }

    &--alt-1 {
      .mouth-1 {
        visibilty: hidden;
      }
      .mouth-2 {
        visibility: visible;
      }
    }

    &--alt-2 {
      .eyes-1, .mouth-2 {
        visibility: hidden !important;
      }

      .eyes-2, .tounge {
        visibility: visible;
      }
    }
  }
}

html.js .hero__arne {
  cursor: pointer;
}

html:not(.js) .hero__arne:hover {
  // alt-1
  .mouth-1 {
    visibilty: hidden;
  }
  .mouth-2 {
    visibility: visible;
  }
}

